// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsPage Component renders correctly 1`] = `
<div>
  <div
    class="xl:grid xl:grid-cols-10 xl:gap-4"
  >
    <div
      class="xl:col-span-8 2xl:col-span-7"
    >
      <div
        class="t-tool-intro border-l-[6px] border-teal-300 pl-6 text-lg text-gray-800 font-normal leading-[26px] mb-10"
        data-testid="tool-intro"
      >
        <p
          class="mb-4"
          data-testid="paragraph"
        >
          pages.pension-details.toolIntro.no-estimate
        </p>
      </div>
      <div
        class="flex items-baseline gap-4 mb-4"
      >
        <div
          class="rounded-full bg-gray-400 min-w-4 min-h-4"
        />
        pages.pension-details.status.inactive
      </div>
    </div>
  </div>
  <div
    class="hidden md:block"
  >
    <div
      class="mt-14 md:mt-16"
    >
      <h2
        class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
        data-testid="table-section-heading"
      >
        pages.pension-details.details.title
      </h2>
      <table
        class="w-full max-md:leading-6 max-md:block table-fixed border-t-1 border-t-slate-400"
        data-testid="table-section-content"
      >
        <thead>
          <tr>
            <th
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block border-b-1 border-b-slate-400 md:w-1/3 lg:w-2/5"
            />
            <th
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block border-b-1 border-b-slate-400"
            >
              pages.pension-details.details.current-value
            </th>
            <th
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block border-b-1 border-b-slate-400"
            >
              pages.pension-details.details.estimate-at-retirement
            </th>
          </tr>
        </thead>
        <tbody
          class="max-md:block"
        >
          <tr
            class="max-md:block border-b-1 border-b-slate-400"
          >
            <td
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
            >
              pages.pension-details.details.annual-amount
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="current-annual-amount"
            >
              --
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="retirement-annual-amount"
            >
              --
            </td>
          </tr>
          <tr
            class="max-md:block border-b-1 border-b-slate-400"
          >
            <td
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
            >
              pages.pension-details.details.monthly-amount
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="current-monthly-amount"
            >
              --
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="retirement-monthly-amount"
            >
              --
            </td>
          </tr>
          <tr
            class="max-md:block border-b-1 border-b-slate-400"
          >
            <td
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
            >
              pages.pension-details.details.pot-value
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="current-pot-value"
            >
              £540,500
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="retirement-pot-value"
            >
              £540,500
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="md:hidden mt-14 md:mt-16"
  >
    <h2
      class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
      data-testid="table-section-heading"
    >
      pages.pension-details.details.title
    </h2>
    <div
      class="max-md:mb-8 *:border-b-1 *:border-b-slate-400 *:py-2"
    >
      <h3
        class="text-2xl md:text-3xl text-gray-800 font-semibold"
      >
        pages.pension-details.details.mobile-current
      </h3>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.annual-amount
        </div>
        <div
          data-testid="current-annual-amount-mobile"
        >
          --
        </div>
      </div>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.monthly-amount
        </div>
        <div
          data-testid="current-monthly-amount-mobile"
        >
          --
        </div>
      </div>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.pot-value
        </div>
        <div
          data-testid="current-pot-value-mobile"
        >
          £540,500
        </div>
      </div>
      <h3
        class="text-2xl md:text-3xl text-gray-800 mt-8 font-semibold"
      >
        pages.pension-details.details.mobile-retirement
      </h3>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.annual-amount
        </div>
        <div
          data-testid="retirement-annual-amount-mobile"
        >
          --
        </div>
      </div>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.monthly-amount
        </div>
        <div
          data-testid="retirement-monthly-amount-mobile"
        >
          --
        </div>
      </div>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.pot-value
        </div>
        <div
          data-testid="retirement-pot-value-mobile"
        >
          £540,500
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-14 md:mt-16"
  >
    <h2
      class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
      data-testid="table-section-heading"
    >
      pages.pension-details.headings.plan-details
    </h2>
    <table
      class="w-full max-md:leading-6 max-md:block table-fixed border-t-1 border-t-slate-400"
      data-testid="table-section-content"
    >
      <tbody
        class="max-md:block"
      >
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.pension-provider.provider
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="pension-provider"
          >
            Pension Admin Highland
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.plan-reference
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="plan-reference"
          >
            Ref/rb-dr-bd-sb-08
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.pension-start-date
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="pension-start-date"
          >
            16 May 2011
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.active-contributions
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="active-contributions"
          >
            common.no
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.employer-name
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="employer-name"
          >
            Borough Finance Centre
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.employer-status
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="employer-status"
          >
            data.pensions.employer-status.C
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.retirement-date
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="retirement-date"
          >
            23 August 2025
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.employment-start-date
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="employment-start"
          >
            16 May 2011
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.employment-end-date
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="employment-end"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.data-illustration-date
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="illustration-date"
          >
            1 January 2024
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.pension-origin
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="pension-origin"
          >
            data.pensions.pension-origin.WM
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="mt-14 md:mt-16"
  >
    <h2
      class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
      data-testid="table-section-heading"
    >
      pages.pension-details.headings.other-details
    </h2>
    <table
      class="w-full max-md:leading-6 max-md:block table-fixed border-t-1 border-t-slate-400"
      data-testid="table-section-content"
    >
      <tbody
        class="max-md:block"
      >
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.calculation-method (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="calculation-method-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.calculation-method (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="calculation-method-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.amount-type (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="amount-type-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.amount-type (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="amount-type-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.last-payment-date (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="last-payment-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.last-payment-date (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="last-payment-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.increase (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="increasing-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.increase (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="increasing-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.survivor-benefit (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="survivor-benefit-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.survivor-benefit (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="survivor-benefit-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.safeguarded-benefit (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="safeguarded-benefit-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.safeguarded-benefit (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="safeguarded-benefit-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.warning (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="warning-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.warning (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="warning-ap"
          >
            --
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="mt-14 md:mt-16"
  >
    <h2
      class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
      data-testid="table-section-heading"
    >
      pages.pension-details.pension-provider.heading
    </h2>
    <table
      class="w-full max-md:leading-6 max-md:block table-fixed border-t-1 border-t-slate-400"
      data-testid="table-section-content"
    >
      <tbody
        class="max-md:block"
      >
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.pension-provider.provider
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            Pension Admin Highland
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            common.contact.website
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            <div>
              <a
                class="inline items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none break-all"
                href="https://www.highlandadmin.co.uk"
                target="_blank"
              >
                https://www.highlandadmin.co.uk
                <span
                  class="sr-only"
                >
                   (opens in a new window) 
                </span>
                <svgr-mock
                  classname="inline ml-[6px] mr-[2px]"
                />
              </a>
            </div>
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.pension-provider.preferred
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="preferred-contact-methods"
          >
            common.contact.website
            , 
            common.contact.email
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            common.contact.email
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="contact-method-email"
          >
            <div>
              <a
                class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none break-all"
                href="mailto:mastertrust@highlandadmin.com"
              >
                mastertrust@highlandadmin.com
              </a>
            </div>
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            common.contact.telephone
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="contact-method-phone"
          >
            <div>
              Main telephone: +44 800873434
            </div>
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            common.contact.address
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="contact-method-address"
          >
            <div
              class="leading-7"
            >
              <p>
                Pension Admin Highland
              </p>
              <p>
                1 Travis Avenue
              </p>
              <p>
                Main Street
              </p>
              <p>
                Liverpool
              </p>
              <p>
                M16 0QG
              </p>
              <p>
                United Kingdom
              </p>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="mt-14 md:mt-16"
  >
    <h2
      class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
      data-testid="table-section-heading"
    >
      pages.pension-details.headings.additional-data
    </h2>
    <table
      class="w-full max-md:leading-6 max-md:block table-fixed border-t-1 border-t-slate-400"
      data-testid="table-section-content"
    >
      <tbody
        class="max-md:block"
      >
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            data.pensions.additional-types.C_AND_C
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            data.pensions.additional-types.SIP
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            data.pensions.additional-types.IMP
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            data.pensions.additional-types.ANR
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            --
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DetailsPage Component renders with WU unavailable code 1`] = `
<div>
  <div
    class="xl:grid xl:grid-cols-10 xl:gap-4"
  >
    <div
      class="xl:col-span-8 2xl:col-span-7"
    >
      <div
        class="t-tool-intro border-l-[6px] border-teal-300 pl-6 text-lg text-gray-800 font-normal leading-[26px] mb-10"
        data-testid="tool-intro"
      >
        <p
          class="mb-4"
          data-testid="paragraph"
        >
          pages.pension-details.toolIntro.no-estimate-wu
        </p>
      </div>
      <div
        class="flex items-baseline gap-4 mb-4"
      >
        <div
          class="rounded-full bg-gray-400 min-w-4 min-h-4"
        />
        pages.pension-details.status.inactive
      </div>
    </div>
  </div>
  <div
    class="hidden md:block"
  >
    <div
      class="mt-14 md:mt-16"
    >
      <h2
        class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
        data-testid="table-section-heading"
      >
        pages.pension-details.details.title
      </h2>
      <table
        class="w-full max-md:leading-6 max-md:block table-fixed border-t-1 border-t-slate-400"
        data-testid="table-section-content"
      >
        <thead>
          <tr>
            <th
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block border-b-1 border-b-slate-400 md:w-1/3 lg:w-2/5"
            />
            <th
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block border-b-1 border-b-slate-400"
            >
              pages.pension-details.details.current-value
            </th>
            <th
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block border-b-1 border-b-slate-400"
            >
              pages.pension-details.details.estimate-at-retirement
            </th>
          </tr>
        </thead>
        <tbody
          class="max-md:block"
        >
          <tr
            class="max-md:block border-b-1 border-b-slate-400"
          >
            <td
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
            >
              pages.pension-details.details.annual-amount
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="current-annual-amount"
            >
              --
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="retirement-annual-amount"
            >
              --
            </td>
          </tr>
          <tr
            class="max-md:block border-b-1 border-b-slate-400"
          >
            <td
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
            >
              pages.pension-details.details.monthly-amount
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="current-monthly-amount"
            >
              --
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="retirement-monthly-amount"
            >
              --
            </td>
          </tr>
          <tr
            class="max-md:block border-b-1 border-b-slate-400"
          >
            <td
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
            >
              pages.pension-details.details.pot-value
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="current-pot-value"
            >
              £540,500
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="retirement-pot-value"
            >
              £540,500
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="md:hidden mt-14 md:mt-16"
  >
    <h2
      class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
      data-testid="table-section-heading"
    >
      pages.pension-details.details.title
    </h2>
    <div
      class="max-md:mb-8 *:border-b-1 *:border-b-slate-400 *:py-2"
    >
      <h3
        class="text-2xl md:text-3xl text-gray-800 font-semibold"
      >
        pages.pension-details.details.mobile-current
      </h3>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.annual-amount
        </div>
        <div
          data-testid="current-annual-amount-mobile"
        >
          --
        </div>
      </div>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.monthly-amount
        </div>
        <div
          data-testid="current-monthly-amount-mobile"
        >
          --
        </div>
      </div>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.pot-value
        </div>
        <div
          data-testid="current-pot-value-mobile"
        >
          £540,500
        </div>
      </div>
      <h3
        class="text-2xl md:text-3xl text-gray-800 mt-8 font-semibold"
      >
        pages.pension-details.details.mobile-retirement
      </h3>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.annual-amount
        </div>
        <div
          data-testid="retirement-annual-amount-mobile"
        >
          --
        </div>
      </div>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.monthly-amount
        </div>
        <div
          data-testid="retirement-monthly-amount-mobile"
        >
          --
        </div>
      </div>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.pot-value
        </div>
        <div
          data-testid="retirement-pot-value-mobile"
        >
          £540,500
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-14 md:mt-16"
  >
    <h2
      class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
      data-testid="table-section-heading"
    >
      pages.pension-details.headings.plan-details
    </h2>
    <table
      class="w-full max-md:leading-6 max-md:block table-fixed border-t-1 border-t-slate-400"
      data-testid="table-section-content"
    >
      <tbody
        class="max-md:block"
      >
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.pension-provider.provider
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="pension-provider"
          >
            Pension Admin Highland
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.plan-reference
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="plan-reference"
          >
            Ref/rb-dr-bd-sb-08
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.pension-start-date
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="pension-start-date"
          >
            16 May 2011
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.active-contributions
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="active-contributions"
          >
            common.no
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.employer-name
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="employer-name"
          >
            Borough Finance Centre
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.employer-status
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="employer-status"
          >
            data.pensions.employer-status.C
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.retirement-date
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="retirement-date"
          >
            23 August 2025
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.employment-start-date
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="employment-start"
          >
            16 May 2011
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.employment-end-date
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="employment-end"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.data-illustration-date
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="illustration-date"
          >
            1 January 2024
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.pension-origin
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="pension-origin"
          >
            data.pensions.pension-origin.WM
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="mt-14 md:mt-16"
  >
    <h2
      class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
      data-testid="table-section-heading"
    >
      pages.pension-details.headings.other-details
    </h2>
    <table
      class="w-full max-md:leading-6 max-md:block table-fixed border-t-1 border-t-slate-400"
      data-testid="table-section-content"
    >
      <tbody
        class="max-md:block"
      >
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.calculation-method (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="calculation-method-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.calculation-method (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="calculation-method-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.amount-type (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="amount-type-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.amount-type (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="amount-type-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.last-payment-date (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="last-payment-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.last-payment-date (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="last-payment-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.increase (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="increasing-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.increase (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="increasing-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.survivor-benefit (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="survivor-benefit-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.survivor-benefit (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="survivor-benefit-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.safeguarded-benefit (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="safeguarded-benefit-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.safeguarded-benefit (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="safeguarded-benefit-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.warning (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="warning-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.warning (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="warning-ap"
          >
            --
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="mt-14 md:mt-16"
  >
    <h2
      class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
      data-testid="table-section-heading"
    >
      pages.pension-details.pension-provider.heading
    </h2>
    <table
      class="w-full max-md:leading-6 max-md:block table-fixed border-t-1 border-t-slate-400"
      data-testid="table-section-content"
    >
      <tbody
        class="max-md:block"
      >
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.pension-provider.provider
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            Pension Admin Highland
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            common.contact.website
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            <div>
              <a
                class="inline items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none break-all"
                href="https://www.highlandadmin.co.uk"
                target="_blank"
              >
                https://www.highlandadmin.co.uk
                <span
                  class="sr-only"
                >
                   (opens in a new window) 
                </span>
                <svgr-mock
                  classname="inline ml-[6px] mr-[2px]"
                />
              </a>
            </div>
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.pension-provider.preferred
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="preferred-contact-methods"
          >
            common.contact.website
            , 
            common.contact.email
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            common.contact.email
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="contact-method-email"
          >
            <div>
              <a
                class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none break-all"
                href="mailto:mastertrust@highlandadmin.com"
              >
                mastertrust@highlandadmin.com
              </a>
            </div>
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            common.contact.telephone
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="contact-method-phone"
          >
            <div>
              Main telephone: +44 800873434
            </div>
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            common.contact.address
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="contact-method-address"
          >
            <div
              class="leading-7"
            >
              <p>
                Pension Admin Highland
              </p>
              <p>
                1 Travis Avenue
              </p>
              <p>
                Main Street
              </p>
              <p>
                Liverpool
              </p>
              <p>
                M16 0QG
              </p>
              <p>
                United Kingdom
              </p>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="mt-14 md:mt-16"
  >
    <h2
      class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
      data-testid="table-section-heading"
    >
      pages.pension-details.headings.additional-data
    </h2>
    <table
      class="w-full max-md:leading-6 max-md:block table-fixed border-t-1 border-t-slate-400"
      data-testid="table-section-content"
    >
      <tbody
        class="max-md:block"
      >
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            data.pensions.additional-types.C_AND_C
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            data.pensions.additional-types.SIP
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            data.pensions.additional-types.IMP
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            data.pensions.additional-types.ANR
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            --
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DetailsPage Component renders without unavailable code 1`] = `
<div>
  <div
    class="xl:grid xl:grid-cols-10 xl:gap-4"
  >
    <div
      class="xl:col-span-8 2xl:col-span-7"
    >
      <div
        class="t-tool-intro border-l-[6px] border-teal-300 pl-6 text-lg text-gray-800 font-normal leading-[26px] mb-10"
        data-testid="tool-intro"
      >
        <p
          class="mb-4"
          data-testid="paragraph"
        >
          pages.pension-details.toolIntro.no-estimate
        </p>
      </div>
      <div
        class="flex items-baseline gap-4 mb-4"
      >
        <div
          class="rounded-full bg-gray-400 min-w-4 min-h-4"
        />
        pages.pension-details.status.inactive
      </div>
    </div>
  </div>
  <div
    class="hidden md:block"
  >
    <div
      class="mt-14 md:mt-16"
    >
      <h2
        class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
        data-testid="table-section-heading"
      >
        pages.pension-details.details.title
      </h2>
      <table
        class="w-full max-md:leading-6 max-md:block table-fixed border-t-1 border-t-slate-400"
        data-testid="table-section-content"
      >
        <thead>
          <tr>
            <th
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block border-b-1 border-b-slate-400 md:w-1/3 lg:w-2/5"
            />
            <th
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block border-b-1 border-b-slate-400"
            >
              pages.pension-details.details.current-value
            </th>
            <th
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block border-b-1 border-b-slate-400"
            >
              pages.pension-details.details.estimate-at-retirement
            </th>
          </tr>
        </thead>
        <tbody
          class="max-md:block"
        >
          <tr
            class="max-md:block border-b-1 border-b-slate-400"
          >
            <td
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
            >
              pages.pension-details.details.annual-amount
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="current-annual-amount"
            >
              --
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="retirement-annual-amount"
            >
              --
            </td>
          </tr>
          <tr
            class="max-md:block border-b-1 border-b-slate-400"
          >
            <td
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
            >
              pages.pension-details.details.monthly-amount
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="current-monthly-amount"
            >
              --
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="retirement-monthly-amount"
            >
              --
            </td>
          </tr>
          <tr
            class="max-md:block border-b-1 border-b-slate-400"
          >
            <td
              class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
            >
              pages.pension-details.details.pot-value
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="current-pot-value"
            >
              £540,500
            </td>
            <td
              class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
              data-testid="retirement-pot-value"
            >
              £540,500
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="md:hidden mt-14 md:mt-16"
  >
    <h2
      class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
      data-testid="table-section-heading"
    >
      pages.pension-details.details.title
    </h2>
    <div
      class="max-md:mb-8 *:border-b-1 *:border-b-slate-400 *:py-2"
    >
      <h3
        class="text-2xl md:text-3xl text-gray-800 font-semibold"
      >
        pages.pension-details.details.mobile-current
      </h3>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.annual-amount
        </div>
        <div
          data-testid="current-annual-amount-mobile"
        >
          --
        </div>
      </div>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.monthly-amount
        </div>
        <div
          data-testid="current-monthly-amount-mobile"
        >
          --
        </div>
      </div>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.pot-value
        </div>
        <div
          data-testid="current-pot-value-mobile"
        >
          £540,500
        </div>
      </div>
      <h3
        class="text-2xl md:text-3xl text-gray-800 mt-8 font-semibold"
      >
        pages.pension-details.details.mobile-retirement
      </h3>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.annual-amount
        </div>
        <div
          data-testid="retirement-annual-amount-mobile"
        >
          --
        </div>
      </div>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.monthly-amount
        </div>
        <div
          data-testid="retirement-monthly-amount-mobile"
        >
          --
        </div>
      </div>
      <div>
        <div
          class="font-bold"
        >
          pages.pension-details.details.pot-value
        </div>
        <div
          data-testid="retirement-pot-value-mobile"
        >
          £540,500
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-14 md:mt-16"
  >
    <h2
      class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
      data-testid="table-section-heading"
    >
      pages.pension-details.headings.plan-details
    </h2>
    <table
      class="w-full max-md:leading-6 max-md:block table-fixed border-t-1 border-t-slate-400"
      data-testid="table-section-content"
    >
      <tbody
        class="max-md:block"
      >
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.pension-provider.provider
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="pension-provider"
          >
            Pension Admin Highland
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.plan-reference
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="plan-reference"
          >
            Ref/rb-dr-bd-sb-08
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.pension-start-date
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="pension-start-date"
          >
            16 May 2011
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.active-contributions
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="active-contributions"
          >
            common.no
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.employer-name
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="employer-name"
          >
            Borough Finance Centre
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.employer-status
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="employer-status"
          >
            data.pensions.employer-status.C
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.retirement-date
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="retirement-date"
          >
            23 August 2025
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.employment-start-date
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="employment-start"
          >
            16 May 2011
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.employment-end-date
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="employment-end"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.data-illustration-date
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="illustration-date"
          >
            1 January 2024
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.plan-details.pension-origin
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="pension-origin"
          >
            data.pensions.pension-origin.WM
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="mt-14 md:mt-16"
  >
    <h2
      class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
      data-testid="table-section-heading"
    >
      pages.pension-details.headings.other-details
    </h2>
    <table
      class="w-full max-md:leading-6 max-md:block table-fixed border-t-1 border-t-slate-400"
      data-testid="table-section-content"
    >
      <tbody
        class="max-md:block"
      >
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.calculation-method (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="calculation-method-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.calculation-method (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="calculation-method-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.amount-type (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="amount-type-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.amount-type (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="amount-type-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.last-payment-date (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="last-payment-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.last-payment-date (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="last-payment-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.increase (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="increasing-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.increase (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="increasing-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.survivor-benefit (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="survivor-benefit-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.survivor-benefit (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="survivor-benefit-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.safeguarded-benefit (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="safeguarded-benefit-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.safeguarded-benefit (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="safeguarded-benefit-ap"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.warning (ERI)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="warning-eri"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.other-details.warning (AP)
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="warning-ap"
          >
            --
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="mt-14 md:mt-16"
  >
    <h2
      class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
      data-testid="table-section-heading"
    >
      pages.pension-details.pension-provider.heading
    </h2>
    <table
      class="w-full max-md:leading-6 max-md:block table-fixed border-t-1 border-t-slate-400"
      data-testid="table-section-content"
    >
      <tbody
        class="max-md:block"
      >
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.pension-provider.provider
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            Pension Admin Highland
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            common.contact.website
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            <div>
              <a
                class="inline items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none break-all"
                href="https://www.highlandadmin.co.uk"
                target="_blank"
              >
                https://www.highlandadmin.co.uk
                <span
                  class="sr-only"
                >
                   (opens in a new window) 
                </span>
                <svgr-mock
                  classname="inline ml-[6px] mr-[2px]"
                />
              </a>
            </div>
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            pages.pension-details.pension-provider.preferred
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="preferred-contact-methods"
          >
            common.contact.website
            , 
            common.contact.email
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            common.contact.email
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="contact-method-email"
          >
            <div>
              <a
                class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none break-all"
                href="mailto:mastertrust@highlandadmin.com"
              >
                mastertrust@highlandadmin.com
              </a>
            </div>
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            common.contact.telephone
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="contact-method-phone"
          >
            <div>
              Main telephone: +44 800873434
            </div>
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            common.contact.address
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
            data-testid="contact-method-address"
          >
            <div
              class="leading-7"
            >
              <p>
                Pension Admin Highland
              </p>
              <p>
                1 Travis Avenue
              </p>
              <p>
                Main Street
              </p>
              <p>
                Liverpool
              </p>
              <p>
                M16 0QG
              </p>
              <p>
                United Kingdom
              </p>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="mt-14 md:mt-16"
  >
    <h2
      class="text-3xl text-gray-800 font-bold max-md:mb-4 md:text-5xl md:mb-4"
      data-testid="table-section-heading"
    >
      pages.pension-details.headings.additional-data
    </h2>
    <table
      class="w-full max-md:leading-6 max-md:block table-fixed border-t-1 border-t-slate-400"
      data-testid="table-section-content"
    >
      <tbody
        class="max-md:block"
      >
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            data.pensions.additional-types.C_AND_C
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            data.pensions.additional-types.SIP
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            data.pensions.additional-types.IMP
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            --
          </td>
        </tr>
        <tr
          class="max-md:block border-b-1 border-b-slate-400"
        >
          <td
            class="text-left align-top font-bold pt-[10px] pb-[2px] md:pt-[14px] md:pb-4 max-md:block md:w-1/2 lg:w-2/5"
          >
            data.pensions.additional-types.ANR
          </td>
          <td
            class="pb-3 md:pt-[14px] md:pb-4 text-left align-top max-md:block"
          >
            --
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
